--- a/.github/workflows/update_ip.yml
+++ b/.github/workflows/update_ip.yml
@@ -99,7 +99,7 @@ jobs:
             [ -z "$port" ] && port=443
             [ $port -eq 443 ] && protocol=https
             local url=`curl -H "content-type: application/json" -A "$UA" \
-              -d '{"type":"http","target":"'$ip'","locations":[{"country":"HK","limit":$PING_LIMIT}],"measurementOptions":{"port":"'$port'","protocol":"'$protocol'"}}' \
+              -d '{"type":"http","target":"'$ip'","locations":[{"country":"HK","limit":'$PING_LIMIT'}],"measurementOptions":{"port":"'$port'","protocol":"'$protocol'"}}' \
               -si "$PING_API"|grep location|awk '{print $2}'|tr -d '\n\r'`
             sleep 1
             while true; do
@@ -132,8 +132,8 @@ jobs:
           while IFS= read -r ip; do
             measure_http $ip 80
           done < ip443.txt
-          echo `wc -l ip80.txt` >> $GITHUB_STEP_SUMMARY
           echo `wc -l ip443.txt` >> $GITHUB_STEP_SUMMARY
+          echo `wc -l ip80.txt` >> $GITHUB_STEP_SUMMARY
           
       - name: update valid ip to server
         run: |
