--- a/.github/workflows/update_host.yml
+++ b/.github/workflows/update_host.yml
@@ -38,6 +38,7 @@ env:
   CF_KV_API: https://api.cloudflare.com/client/v4/accounts/${{secrets.CF_ACCOUNT_ID}}/storage/kv/namespaces/${{secrets.CF_NAMESPACE_ID}}/values
   CF_SCRIPT_API: https://api.cloudflare.com/client/v4/accounts/${{secrets.CF_ACCOUNT_ID}}/workers/scripts
   CF_PROJECT_API: https://api.cloudflare.com/client/v4/accounts/${{secrets.CF_ACCOUNT_ID}}/pages/projects
+  CF_API_TOKEN: ${{secrets.CF_API_TOKEN}}
   CFHOST: cfhost
   CFHOST_BAK: cfhost_bak
   CFHOST_JSON: cfhost.json
@@ -67,16 +68,16 @@ jobs:
         name: get cfhost, merge, backup
         run: |
           merge_backup(){
-            local ret=`curl -H "Authorization:Bearer ${{secrets.CF_API_TOKEN}}" "$CF_KV_API/$1"`
+            local ret=`curl -H "Authorization:Bearer $CF_API_TOKEN" "$CF_KV_API/$1"`
             if echo "$ret"|grep error; then
               echo $ret;
             elif [ ! -z "$ret" ] && [ ! "$ret" = "[]" ]; then
               echo "get-data $1" >> $GITHUB_STEP_SUMMARY
-              curl -X PUT -H "Authorization:Bearer ${{secrets.CF_API_TOKEN}}" \
+              curl -X PUT -H "Authorization:Bearer $CF_API_TOKEN" \
                 -d "" "$CF_KV_API/$1" >> $GITHUB_STEP_SUMMARY
               
               echo $ret|tr -d '[]'|sed -r 's/, ?/\n/g' > tmp.txt
-              local bak=`curl -H "Authorization:Bearer ${{secrets.CF_API_TOKEN}}" "$CF_KV_API/$2"`
+              local bak=`curl -H "Authorization:Bearer $CF_API_TOKEN" "$CF_KV_API/$2"`
               if ! echo "$bak"|grep error && [ ! -z "$bak" ] && [ ! "$bak" = "[]" ]; then
                 echo $bak|tr -d '[]'|sed -r 's/, ?/\n/g' >> tmp.txt
                 ret=[$(echo `cat tmp.txt|sort -u`|tr -s ' ' ',')]
@@ -85,7 +86,7 @@ jobs:
               echo `cat $3`|tr -d '[]'|sed -r 's/, ?/\n/g' >> tmp.txt
               echo [$(echo `cat tmp.txt|sort -u`|tr -s ' ' ',')] > $3
               
-              curl -X PUT -H "Authorization:Bearer ${{secrets.CF_API_TOKEN}}" \
+              curl -X PUT -H "Authorization:Bearer $CF_API_TOKEN" \
                 -d "$ret" "$CF_KV_API/$2" >> $GITHUB_STEP_SUMMARY
             fi
           }
@@ -105,12 +106,16 @@ jobs:
             # git add $CFHOST_JSON
             # git commit -m "updated cfhost"
             # git push
-            
             echo "cfhost no change" >> $GITHUB_STEP_SUMMARY
+            
+            [ ! -z ${{ inputs.proxys }} ] && exit;
+            
             # cancel when trigger on schedule # [ -z `git diff --name-only $BEFORE $AFTER 2>&1` ]
             # and when now - (updated time of proxys data) >= 7200s
-            ret=`curl -H "Authorization:Bearer ${{secrets.CF_API_TOKEN}}" "$CF_KV_API/$PROXYS_UPDATED"`
-            if [ $EVENT_NAME = schedule ] && ! echo "$ret"|grep error && [ $((`date +%s` - $ret)) -ge 7200 ]; then
+            df='+%Y-%m-%d %H:%M:%S %z'
+            s=`curl -H "Authorization:Bearer $CF_API_TOKEN" "$CF_KV_API/$PROXYS_UPDATED"`
+            echo "$ret"|grep error && s=0 || echo "$PROXYS_UPDATED:`date "$df" -d @$s`, now:`date "$df"`" >> $GITHUB_STEP_SUMMARY
+            if [ $EVENT_NAME = schedule ] && [ $((`date +%s` - $s)) -ge 7000 ]; then
               echo "on schedule, no change no need to deploy" >> $GITHUB_STEP_SUMMARY
               gh run cancel ${{ github.run_id }}
               gh run watch ${{ github.run_id }}
@@ -122,13 +127,13 @@ jobs:
         # if: ${{ github.event_name == 'workflow_call' }}
         run: |
           if [ ! -z ${{ inputs.proxys }} ]; then
-             echo ${{ inputs.proxys }} > $PROXYS_JSON
+            echo ${{ inputs.proxys }} > $PROXYS_JSON
           else
-            ret=`curl -H "Authorization:Bearer ${{secrets.CF_API_TOKEN}}" "$CF_KV_API/$PROXYS"`
+            ret=`curl -H "Authorization:Bearer $CF_API_TOKEN" "$CF_KV_API/$PROXYS"`
             echo "$ret"|grep error && exit 443 || echo "$ret" > $PROXYS_JSON
           fi
           
-      - name: set up node.js
+      - name: setup node
         if: steps.get-proxys.conclusion == 'success'
         uses: actions/setup-node@v3
         with:
@@ -139,19 +144,18 @@ jobs:
           npm i
           npm run esbuild
           
-          
       - name: deploy worker, page
         run: |
           [ ! -s "dist/$ENTRY" ] && echo "$ENTRY not found!" && exit;
           echo "s5 deploy worker.." >> $GITHUB_STEP_SUMMARY
-          curl -X PUT -H "Authorization:Bearer ${{secrets.CF_API_TOKEN}}" \
+          curl -X PUT -H "Authorization:Bearer $CF_API_TOKEN" \
             -H 'Content-Type: multipart/form-data' \
             --form "worker.js=@dist/$ENTRY;type=application/javascript+module" \
             --form 'metadata={"main_module":"'$ENTRY'"}' \
             --url $CF_SCRIPT_API/$SCRIPT/content | tail -n 4 >> $GITHUB_STEP_SUMMARY
           [ ! $deployPage ] && exit;
           echo "deploy page.." >> $GITHUB_STEP_SUMMARY
-          curl -X POST -H "Authorization:Bearer ${{secrets.CF_API_TOKEN}}" \
+          curl -X POST -H "Authorization:Bearer $CF_API_TOKEN" \
             -H 'Content-Type: multipart/form-data' \
             --form "$ENTRY=@dist/$ENTRY;type=application/javascript" \
             --form 'manifest={}' \
