--- a/.github/workflows/update_host.yml
+++ b/.github/workflows/update_host.yml
@@ -55,10 +55,10 @@ on:
         required: true
 
 env:
-  workerName: ${{inputs.workerName||'v2'}
-  pageName: ${{inputs.pageName||'v1'}
-  pageBranch: ${{inputs.pageBranch||'test'}
-  deployPage: ${{inputs.deployPage||true}}
+  workerName: ${{inputs.workerName || 'v2'}}
+  pageName: ${{inputs.pageName || 'v1'}}
+  pageBranch: ${{inputs.pageBranch || 'test'}}
+  deployPage: ${{inputs.deployPage || true }}
   EVENT_NAME: ${{github.event_name}}
   CF_KV_API: https://api.cloudflare.com/client/v4/accounts/${{secrets.CF_ACCOUNT_ID}}/storage/kv/namespaces/${{secrets.CF_NAMESPACE_ID}}/values
   CF_SCRIPT_API: https://api.cloudflare.com/client/v4/accounts/${{secrets.CF_ACCOUNT_ID}}/workers/scripts
