--- a/.github/workflows/update_host.yml
+++ b/.github/workflows/update_host.yml
@@ -176,7 +176,7 @@ jobs:
           curl -X PUT -H "Authorization:Bearer $CF_API_TOKEN" \
             -H 'Content-Type: multipart/form-data' \
             --form "worker.js=@dist/$ENTRY;type=application/javascript+module" \
-            --form $metadata \
+            --form "$metadata" \
             --url $CF_SCRIPT_API/$workerName/content | tail -n 4 >> $GITHUB_STEP_SUMMARY
           [ ! $deployPage ] && exit;
           echo "deploy page.." >> $GITHUB_STEP_SUMMARY
@@ -184,6 +184,6 @@ jobs:
             -H 'Content-Type: multipart/form-data' \
             --form "$ENTRY=@dist/$ENTRY;type=application/javascript" \
             --form 'manifest={}' \
-            --form $metadata \
+            --form "$metadata" \
             --form "branch=$pageBranch" \
             --url $CF_PROJECT_API/$pageName/deployments | tail -n 4 >> $GITHUB_STEP_SUMMARY
