--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,9 +5,9 @@ name: test
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
-  push:
+  #push:
   #  branches: [ "main" ]
-  pull_request:
+  #pull_request:
   #  branches: [ "main" ]
 
   # Allows you to run this workflow manually from the Actions tab
@@ -16,7 +16,7 @@ on:
       json:
         description: 'json content'
         required: false
-        default: '[{"1.1","2.2"},"3.3"]'
+        default: '[{"1.1":"2.2"},"3.3",4]'
         type: 'string'
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
@@ -35,8 +35,10 @@ jobs:
       - name: inputs json test
         run: |
           if [ ! -z '${{ inputs.json }}' ]; then
-            jq --help
-            echo '${{ inputs.json }}' | jq .
+            # https://stackoverflow.com/questions/46954692/check-if-string-is-a-valid-json-with-jq
+            echo '${{ inputs.json }}' | jq -e . >/dev/null
+            jq -e . >/dev/null <<< '${{ inputs.json }}'
             echo '${{ inputs.json }}' > test.json
             cat test.json
+            jq --help
           fi
