--- a/.github/workflows/update_ip.yml
+++ b/.github/workflows/update_ip.yml
@@ -26,7 +26,7 @@ on:
           - false
 
 env:
-  downloadUpdatedIP: ${{inputs.downloadUpdatedIPFirst != 'false'}}
+  EVENT_NAME: ${{github.event_name}}
   CF_API_TOKEN: ${{secrets.CF_API_TOKEN}}
   CF_NAMESPACE_ID: ${{secrets.CF_NAMESPACE_ID || vars.CF_NAMESPACE_ID}}
   CF_KV_API: https://api.cloudflare.com/client/v4/accounts/${{secrets.CF_ACCOUNT_ID}}/storage/kv/namespaces/${{secrets.CF_NAMESPACE_ID || vars.CF_NAMESPACE_ID}}/values
@@ -56,7 +56,7 @@ jobs:
       - uses: actions/checkout@v4
       
       - name: download ip zip file, unzip, merge, uniq
-        if: ${{ ! contains(github.event.schedule, '/') && ! contains(github.event.schedule, ',') || env.downloadUpdatedIP == 'true' }}
+        if: ${{ ! contains(github.event.schedule, '/') && ! contains(github.event.schedule, ',') || inputs.downloadUpdatedIPFirst == 'true' }}
         run: |
           [ -z ${{secrets.CF_ACCOUNT_ID}} ] || [ -z $CF_API_TOKEN ] || [ -z $CF_NAMESPACE_ID ] && echo "secrets and CF_NAMESPACE_ID required!" && exit 1;
           #curl -o ip.zip https://zip.baipiao.eu.org
